Adds stop and skip buttons
- Adds stop button that stops the timer and re-enables the start button
- Adds skip button that generates a new word and doesn't increment the count
- Disables the stop, skip, and next buttons on page load

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <div class='button-item'>
       <button id="start">Start</button>
     </div>
+    <div class='button-item'>
+      <button id="stop" disabled>Stop</button>
+    </div>
     <div class="button-item">
       <div id="number-correct">0</div>
     </div>
     <div class='button-item'>
-      <button id="next-word">Next Word</button>
+      <button id="next-word" disabled>Next Word</button>
+    </div>
+    <div class='button-item'>
+      <button id="skip-word" disabled>Skip Word</button>
     </div>
   </div>
   <script type="text/javascript" src="scripts.js"></script>
